infrastructure/gcp/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwise
  namespace: bookwise
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: bookwise-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookwise-web
                port:
                  name: http
